tests/unit/language/errors/bounds.arche
// RUN: %arche build -o %t %s && %t
#import { fmt }
Particle :: arche { id :: int }

[5]Particle ?abort;

entry :: system {
  insert(Particle { id: 1 })(_:, _:);
  insert(Particle { id: 2 })(_:, _:);
  a := Particle.id[0];
  b := Particle.id[1];
  fmt.assert(a == 1, "bounds check failed: a != 1\n")();
  fmt.assert(b == 2, "bounds check failed: b != 2\n")();
}

#run entry
